--- a/Makefile.machine.include
+++ b/Makefile.machine.include
@@ -29,7 +29,8 @@ BSG_MACHINE_GLOBAL_X                  = 4
 BSG_MACHINE_GLOBAL_Y                  = 5
 BSG_MACHINE_VCACHE_SET                = 64
 BSG_MACHINE_VCACHE_WAY                = 8
-BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS   = 16
+BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS   = 8
+#BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS   = 16
 BSG_MACHINE_VCACHE_STRIPE_SIZE_WORDS  = $(BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS)
 BSG_MACHINE_DRAM_INCLUDED             = 1
 BSG_MACHINE_MAX_EPA_WIDTH             = 28
@@ -48,4 +49,6 @@ CL_MANYCORE_HOST_COORD_Y             := 0
 CL_MANYCORE_DIM_X                    := $(BSG_MACHINE_GLOBAL_X)
 CL_MANYCORE_DIM_Y                    := $(shell expr $(BSG_MACHINE_GLOBAL_Y) - 1)
 
-CL_MANYCORE_MEM_CFG                  := e_vcache_blocking_axi4_f1_model
+#CL_MANYCORE_MEM_CFG                  := e_vcache_blocking_axi4_f1_model
+CL_MANYCORE_MEM_CFG                  := e_vcache_blocking_axi4_xilinx_hbm_direct_no_ro
+#CL_MANYCORE_MEM_CFG                  := e_vcache_blocking_axi4_f1_dram
