--- a/machines/4x4_blocking_dramsim3_hbm2_512mb/Makefile.machine.include
+++ b/machines/4x4_blocking_dramsim3_hbm2_512mb/Makefile.machine.include
@@ -31,6 +31,7 @@ BSG_MACHINE_VCACHE_SET                = 64
 BSG_MACHINE_VCACHE_WAY                = 8
 BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS   = 8
 BSG_MACHINE_VCACHE_STRIPE_SIZE_WORDS  = $(BSG_MACHINE_VCACHE_BLOCK_SIZE_WORDS)
+BSG_MACHINE_VCACHE_DMA_DATA_WIDTH     = 32
 BSG_MACHINE_VCACHE_MISS_FIFO_ELS      = 32
 BSG_MACHINE_DRAM_INCLUDED             = 1
 BSG_MACHINE_MAX_EPA_WIDTH             = 28
@@ -45,7 +46,7 @@ BSG_MACHINE_DATA_WIDTH                = 32
 BSG_MACHINE_BRANCH_TRACE_EN          ?= 0
 
 CL_MANYCORE_HOST_COORD_X             := 0
-CL_MANYCORE_HOST_COORD_Y             := 0
+CL_MANYCORE_HOST_COORD_Y             := 1
 CL_MANYCORE_DIM_X                    := $(BSG_MACHINE_GLOBAL_X)
 CL_MANYCORE_DIM_Y                    := $(shell expr $(BSG_MACHINE_GLOBAL_Y) - 1)
 
