Added support for multimachine simulation
* Renamed cosim_wrapper.sv to machine_wrapper.sv
  * Renamed the module to use `BSG_MACHINE_NAME macro instead
* Changed VCS Worklib compilation process produce a machine-specific worklib
* Modified synopsys_sim.setup generation process to handle above
* Removed base Makefile.machine.include
* Split BSG_MACHINE_PATH from environment.mk into machine.mk
  * Users now modify path in machine.mk
* Updated README

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 __pycache__
 .Xil
 
+
+f1_parameters.vh
+bsg_bladerunner_configuration.rom
+bsg_bladerunner_configuration.v
+bsg_bladerunner_rom_pkg.vh
